bug fixed using media query preventing structure class content from merging on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,10 @@ h2 {
     height:250px;
 }
 
+@media only screen and (max-width: 336px) {
+    .structure { height: 95%;
+}
+
 .frame {
     border: double;
     padding: 30px 0 50px;
@@ -194,4 +198,3 @@ footer {
 .fa-twitter-square {
     color: rgb(24 16 1);
 }
-
